--- a/src/DesafioTecnicoArtycs.CrossCutting.IoC/DesafioTecnicoArtycs.CrossCutting.IoC.csproj
+++ b/src/DesafioTecnicoArtycs.CrossCutting.IoC/DesafioTecnicoArtycs.CrossCutting.IoC.csproj
@@ -12,9 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\DesafioTecnicoArtycs.Application\DesafioTecnicoArtycs.Application.csproj" />
-    <ProjectReference Include="..\src\DesafioTecnicoArtycs.Domain\DesafioTecnicoArtycs.Domain.csproj" />
-    <ProjectReference Include="..\src\DesafioTecnicoArtycs.Infra\DesafioTecnicoArtycs.Infra.csproj" />
+    <ProjectReference Include="..\DesafioTecnicoArtycs.Application\DesafioTecnicoArtycs.Application.csproj" />
+    <ProjectReference Include="..\DesafioTecnicoArtycs.Domain\DesafioTecnicoArtycs.Domain.csproj" />
   </ItemGroup>
 
 </Project>
